[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://textures/metal_rust/metal_rust-diffuse.png" type="Texture" id=2]
[ext_resource path="res://textures/metal_rust/metal_rust-specular.png" type="Texture" id=3]
[ext_resource path="res://textures/metal_rust/metal_rust-normal.png" type="Texture" id=4]
[ext_resource path="res://Menus/MenuFont48.tres" type="DynamicFont" id=5]
[ext_resource path="res://screen_panel/screen_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://cockpit/black.png" type="Texture" id=7]
[ext_resource path="res://Menus/MenuSound.tscn" type="PackedScene" id=8]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 2
albedo_texture = ExtResource( 2 )
metallic_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 4 )

[sub_resource type="Environment" id=6]
background_mode = 1
background_color = Color( 0, 0.352941, 0.462745, 1 )
ambient_light_color = Color( 1, 0, 0, 1 )
ambient_light_energy = 0.0

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="Shader" id=4]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform sampler2D texture_metallic : hint_white;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_white;
uniform vec4 roughness_texture_channel;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
}

void light(){
	DIFFUSE_LIGHT = ALBEDO;
}
"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/albedo = Color( 0, 0, 0, 1 )
shader_param/specular = 0.0
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/metallic_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/roughness_texture_channel = Plane( 1, 0, 0, 0 )
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 7 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 1 )

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.216508, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0, 0.527579, 0 )
environment = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 1000 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 1
render_target_v_flip = true

[node name="Text" type="RichTextLabel" parent="Viewport"]
margin_right = 1000.0
margin_bottom = 1000.0
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 1, 0, 1 )
custom_colors/selection_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_selected = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0, 1 )
text = "Deep Blue 

Our anxiety-provoking atmosphere video game in deep sea, made for our final year at École Supérieure d'Ingénieurs de Rennes

Use the mouse to interact with elements. QWSD/AZSD to move your submarine

Romain Ringenbach, Quentin Dugne -- Hennequin, Pierre-Adrien Fons
Version 0.2 12/2019"
scroll_active = false

[node name="Screen" parent="." instance=ExtResource( 6 )]
viewport_texture = SubResource( 3 )
already_on = true

[node name="Button3" parent="Screen" index="2"]
type = 0
toggle = true

[node name="Label1" parent="Screen" index="3"]
text_label = "Start"

[node name="Label2" parent="Screen" index="4"]
text_label = "Settings"

[node name="Label3" parent="Screen" index="5"]
text_label = "Quit"

[node name="MeshInstance" parent="Screen" index="6"]
material_override = SubResource( 5 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.249758, 0.968308, 0, -0.968308, -0.249758, -0.0351701, 0.592922, -0.299636 )
light_energy = 0.31
light_indirect_energy = 0.66
light_specular = 0.03
spot_range = 3.0
spot_attenuation = 3.13834

[node name="MenuSound" parent="." instance=ExtResource( 8 )]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.56529, 0.381486, 0.516707 )
light_color = Color( 1, 0, 0, 1 )
light_cull_mask = 4294933503
omni_range = 1.0535
omni_attenuation = 1.8025
[connection signal="left_click" from="Screen/Button1" to="." method="_on_Button1_left_click"]
[connection signal="button_blinking_terminated" from="Screen/Button3" to="." method="_on_Button3_button_blinking_terminated"]

[editable path="Screen"]
